--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Welcome Ge
 description: Happily Build Products
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/welcomege/welcomege.github.io/master/images/avataaars.png
 
 #
 # Flags below are optional
