--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github: welcomege # Add your Github handle
 #pinterest: # Add your Pinterest handle
 
 # Newsletter
-mailchimp: # Add your MailChimp form identifier.
+# mailchimp: # Add your MailChimp form identifier.
 
 # Disqus
 discus_identifier:  # Add your discus identifier
