--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ google_fonts:
     weights: "400,400i,700,700i"
 google_analytics: # Google Analytics id, e.g. "UA-NNNNNNNN-N"
 disqus:
-  shortname: welcomege_ml_github
+  shortname: welcomege-ml-github
 twitter:
   username: # site's Twitter username, e.g. "mmistakes"
 
